# yvan-vivid.github.io

./: .gitmodules  CNAME  README.md  about.rst  archive.html  contact.html  contact.markdown  global.css  index.html  main.1580382810.css  manifest.json  notes.md  service-worker-index.html  service-worker.js  shame.27b056be.css  shame.html  site.hs  stack.yaml  yvan-vivid-github-io.cabal
_app/: error.svelte-48d7379f.js  start-73079b93.js
_app/chunks/: vendor-b01985f5.js
_app/pages/: __layout.svelte-4c5fa94d.js  about.svelte-86ef8678.js  eye-closure.svelte-1a1b2546.js  index.svelte-a45119de.js
about/: index.html
client/: [slug].5115c6c9.js  [slug].5a62e3ce.js  about.6e5d79f5.js  about.f5779c0c.js  client-b2f7160d.css  client.4cc2514d.js  client.9c45a6a5.js  index-0e715d3d.css  index-651f925c.css  index.36f1b021.js  index.3a5cb8eb.js  index.3cbe3016.js  index.3dd6d438.js  index.dadf4f6a.js  index.e0785bbc.js
client/legacy/: [slug].3755290e.js  [slug].8d562635.js  about.bcb49ed6.js  about.ca330d61.js  client-ba6c3038.css  client.0d6dc7df.js  client.6d27a9cd.js  index-9fa40c0a.css  index-db68ffcf.css  index.185c011c.js  index.2a07dc99.js  index.59d858e7.js  index.9ddf8dfa.js  index.cfdbcc3b.js  index.d803aabf.js
css/: default.css  default.scss
eye-closure/: index.html
how-we-met/: index.html
how-we-met/forward/: index.html
how-we-met/preamble/: index.html
how-we-met/preface/: index.html
posts/: 13-1-0-2-6.the-mind-of-the-artist-conference.markdown  13-1-0-2-6.the-mind-of-the-artist-conference.published.html  13-1-1-1-3.is-infinity-real.markdown
(+11 files in other folders)
