name:               yvan-vivid-github-io
version:            0.0.0.1
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , hakyll-sass == 0.2.*
                  , pandoc == 2.2.*
                  , containers == 0.5.*
  ghc-options:      -threaded
  default-language: Haskell2010
